feat: Create user and login user
