# src/main/java/barcante/condominiummanager/infra/repository/user/model/UserEntity.java
@@ -40,6 +40,10 @@ public class UserEntity {
 
     private String name;
 
+    private String username;
+
+    private String password;
+
     @Column(unique = true)
     private String email;
 
